syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__impl_dyn_trait__tests__it_matches_dyn_hello_type.snap
---
source: syn-state-machine/src/common_tokens/impl_dyn_trait.rs
expression: "crate::parse::<TraitObjectType>(::quote::quote! { dyn Hello })"
---
Ok(
    (
        TraitObjectType(
            TypeParamBounds(
                [
                    TraitBound(
                        TraitBound {
                            q: false,
                            for: None,
                            ty: TypePath {
                                leading: false,
                                segments: [
                                    Simple {
                                        id: Id(
                                            Ident(
                                                Hello,
                                            ),
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                ],
            ),
        ),
        0,
    ),
)
