syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__impl_dyn_trait__tests__it_matches_impl_hello.snap
---
source: syn-state-machine/src/common_tokens/impl_dyn_trait.rs
expression: "crate::parse::<ImplTraitTypeOneBound>(::quote::quote! { impl Hello })"
---
Ok(
    (
        ImplTraitTypeOneBound(
            TraitBound {
                q: false,
                for: None,
                ty: TypePath {
                    leading: false,
                    segments: [
                        Simple {
                            id: Id(
                                Ident(
                                    Hello,
                                ),
                            ),
                        },
                    ],
                },
            },
        ),
        0,
    ),
)
